--- a/style/index.css
+++ b/style/index.css
@@ -73,11 +73,6 @@ nav {
     padding: 1%;
 }
 
-nav a:hover {
-    background-color: black;
-    color: white;
-}
-
 nav a {
     color: black;
     text-decoration: none;
@@ -85,6 +80,12 @@ nav a {
     border: 1px solid black;
     padding: 2px;
     }
+
+  
+nav a:hover {
+    background-color: black;
+    color: white;
+}      
 
 /*inroduction styles*/
 .introduction {
@@ -130,16 +131,18 @@ footer {
     padding: 4%;
 }
 
+/*button styles*/
+button:hover {
+    background: black;
+    color: white;
+}
+
 /*media query styles*/
 
-@media only screean and (min-width: 569px) {
-    header {
-        flex-direction: row;
-    }
-    .introduction {
-        flex-direction: row;
-    }
-   * {
-       background: chartreuse;
-   }                                                                
-} 
+
+@media only screen and (min-width: 569px) {
+    .home-page-container {margin:0 10% 0 10%;}
+    header {flex-direction: row;}
+    nav {flex-direction: row;}
+    .introduction {flex-direction: row;}
+}
